# av_perception

./: environment.yml  pyproject.toml
av_perception/models/: simple_bev.py
av_perception/utils/: carla_client.py  logger.py  paths.py
scripts/: poster_bev.py  poster_surround_view.py  test_carla_connection.py  test_dataset.py  test_model.py
