[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "av_perception"
version = "0.1.0"
description = "Modular BEV perception pipeline for autonomous driving using CARLA"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0,<2.0.0",
    "opencv-python>=4.8.0,<4.11.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.0",
    "pyyaml>=6.0",
    "Pillow>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "black>=23.0",
    "pre-commit>=3.0",
]
viz = [
    "matplotlib>=3.7.0",
]
carla = []

[project.scripts]
av-train = "av_perception.engine.trainer:main"
av-collect = "av_perception.data.collect:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["av_perception*"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
